--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.1",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
